fix nav menu top inset on mobile

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -104,7 +104,7 @@ ul, a {
         position: fixed;
         z-index: 10;
         height: 100%;
-        inset: 15% 0 0 0;
+        inset: 12% 0 0 0;
     }
 
     .navlist_mobile {
